<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMovie">

    <TextView
        android:id="@+id/adminText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/movieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/movieYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mYear"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/movieAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>